force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/maps__AdvRoutePromotionalPeriodConfiguration__c.object-meta.xml
<CustomObject>
    <label>Maps Advanced Promotional Period Config</label>
    <nameField>
        <label>Maps Advanced Promotional Period Config</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Promotional Period Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>