force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/fields/maps__AdvRouteDataSet__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteDataSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Advanced Route Data Set</label>
    <referenceTo>maps__AdvRouteDataSet__c</referenceTo>
    <relationshipLabel>Maps Advanced Promotional Period Configurations</relationshipLabel>
    <relationshipName>PromotionalPeriodConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>