force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/fields/maps__EndDateFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDateFieldApi__c</fullName>
    <label>End Date Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>