force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/fields/maps__MaxDaysBetweenVisitsFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxDaysBetweenVisitsFieldApi__c</fullName>
    <label>Maximum Days Between Visits Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>