force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/fields/maps__MoreThanOneVisitPerPeriod__c.field-meta.xml
<CustomField>
    <fullName>maps__MoreThanOneVisitPerPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to show if the promotional period has been set up to require more than one visit during this time</description>
    <label>More than one visit per promo period</label>
    <type>Checkbox</type>
</CustomField>