force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/fields/maps__PromoObjectRelationshipFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__PromoObjectRelationshipFieldApi__c</fullName>
    <description>The Api name of a field that looks up to the routed object</description>
    <inlineHelpText>The Api name of a field that looks up to the routed object</inlineHelpText>
    <label>Promo Object Relationship Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>