force-app/main/default/objects/maps__AdvRoutePromotionalPeriodConfiguration__c/fields/maps__StartDateFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDateFieldApi__c</fullName>
    <label>Start Date Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>